compilers/ID/cool/regression/BASE_cgtest/old_cool/case_correct.cl.stderr
"./BASE_cgtest/case_correct.cl", line 9: parse error at or near ESAC
"./BASE_cgtest/case_correct.cl", line 15: parse error at or near ESAC
Compilation halted due to lex and parse errors
